<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.classifications.list.ClassificationsFragment">

        <View
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/main_color"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/add_classification_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="12dp"
            android:src="@drawable/ic_add"
            android:background="@drawable/background_menu_button_click"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/add_classification_button_description"
            app:layout_constraintTop_toTopOf="@id/header_view"
            app:layout_constraintEnd_toEndOf="@id/header_view"/>

        <TextView
            android:id="@+id/big_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/welcome_mohamed"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/add_classification_button"
            app:layout_constraintBottom_toTopOf="@id/title_text_view"/>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/classifications"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="@id/top_guideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classifications_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/list_item_classification"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
