<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isEdit"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        tools:context=".ui.classifications.add.AddClassificationBottomSheet">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@{isEdit ? @string/edit_todo : @string/add_todo}"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/accent_color"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/todo"
            android:background="@drawable/background_edit_text"
            android:textColorHint="#D1D1D1"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"/>

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:importantForAutofill="no"
            android:inputType="text"
            android:imeOptions="normal"
            android:textColor="@color/accent_color"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/description"
            android:background="@drawable/background_edit_text"
            android:textColorHint="#D1D1D1"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/classificationsSpinner"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/description_edit_text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@{isEdit ? @string/edit_todo : @string/add_todo}"
            android:background="@drawable/background_button"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/classificationsSpinner"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/delete_todo"
            android:background="@drawable/background_danger_button"
            android:visibility="@{isEdit ? View.VISIBLE : View.GONE}"
            tools:visibility="visible"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/save_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
